# NullShare

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py
nullshare/: __init__.py  __main__.py  banner.py  cli.py  qr_generator.py  server.py  utils.py
nullshare/templates/: __init__.py  index.html
tests/: test_cli.py
