[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nullshare"
version = "0.1.0"
description = "Share files via QR code on local network - No internet, no cloud, just local WiFi"
authors = [
    {name = "MOOKA-513", email = "mouka-513@proton.me"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["file-transfer", "qr-code", "local-network", "cli-tool"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Communications :: File Sharing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0.0",
    "flask>=2.3.0",
    "qrcode>=7.4.0",
    "pillow>=10.0.0",
    "colorama>=0.4.6",
    "netifaces>=0.11.0",
]

[project.scripts]
nullshare = "nullshare.cli:main"
nullshare-gui = "nullshare.gui:main"  # We'll add GUI later

[project.urls]
Homepage = "https://github.com/MOOKA-513/NullShare"
Repository = "https://github.com/MOOKA-513/NullShare"
Issues = "https://github.com/MOOKA-513/NullShare/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
nullshare = ["templates/*.html"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88
