[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nullshare"
version = "1.1.0"
description = "Share files via QR code on local network"
readme = "README.md"
authors = [{name = "MOUKA-513"}]
license = {text = "MIT"}
keywords = ["file-sharing", "qr-code", "local-network", "wifi", "flask", "cli"]
requires-python = ">=3.7"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Communications :: File Sharing",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "click>=8.0.0",
    "Flask>=2.0.0",
    "qrcode>=7.0.0",
    "Pillow>=9.0.0",
    "requests>=2.25.0",
    "netifaces>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[project.scripts]
nullshare = "nullshare.cli:main"
ns = "nullshare.cli:main"

[project.urls]
Homepage = "https://github.com/MOUKA-513/NullShare"
"Bug Tracker" = "https://github.com/MOUKA-513/NullShare/issues"

[tool.setuptools]
packages = ["nullshare"]
include-package-data = true

[tool.setuptools.package-data]
nullshare = ["templates/*.html"]
